# api-otel-example-rust

./: Cargo.toml  Dockerfile  benchmark.yaml  docker-compose.yml  pod.yaml  prometheus.yaml
src/: main.rs
