[package]
name = "api-otel-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.9.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

strum_macros = "0.24.2"

# web stuff
reqwest = { version = "0.11", features = ["json", "blocking"] }
actix-web = "4"
actix-rt = "2.7.0"

diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"

mysql = "22.2.0"

chrono = { version = "0.4.6", features = ["serde"] }

opentelemetry-prometheus = "0.10.0"
actix-web-opentelemetry = {version = "0.12.0", features =["metrics"]}
opentelemetry-otlp = "0.10.0"
opentelemetry-http = "0.6.0"
opentelemetry = "0.17.0"
prometheus = "0.13.1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# error managmement
anyhow = "1.0"

# aws
tokio = { version = "1", features = ["full"] }
